--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <p>I got my bachelor's degree of enginnering majoring in Measurement Technologies and Instruments(a EE-like major) and a double degree of economics minoring in Mathematical 
          Statistics at Xiamen University. During my undergraduation years, I did research for the first time on a imaging device for meibomian glands of human eyes. I also won
          a first prize(UG group) of China National Mathematical Modeling Competition.<p>
-      <p>My research interests include Heuristic Algorithms(GA, DE..), the application of LASSO in signal processing and time series.</p>
+      <p>My research interests include Heuristic Algorithms(GA, DE..), signal processing and the applications of LASSO.</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
