--- a/working.html
+++ b/working.html
@@ -119,10 +119,11 @@
       <hr>
       <!--<h3>Instructor and Designer</h3>-->
       <h4><b>Volume Forecast of Home Loan Applications(DFS, 02.2022 - 05.2022)</b></h4>
-      This project is raised mainly becasue of the significant increase in house price in USA during 2021. This 18% increase in house price brings a boost of $3.2 trillion in home equity, 
-      which contributed a lot to the momentum for home equity loan applications. In this case, more stuff are needed to help on the applications due to this momentum. We built a time series model based 
-      on Prophet(Developed by Meta Open Source) and made predictions on future application volumes to help us estimate the number of newly hired agents that are required.<br>
-      Here is a similar and simpler project based on public dataset(<a href="https://github.com/HongzhenGit/Time-Series-Forecasting">Forecast on electricity demand in AUS</a>)<br>
+      This project is proposed mainly becasue the house price in USA jumped by 18% last year. This significant increase in house price brings a boost of $3.2 trillion in home equity, 
+      which contributed a lot to the momentum for home equity loan applications. As a consequence, DFS need hire more stuffs to help on these extra applications. To provide some insights, we built a 
+      time series model with Prophet (Developed by Meta Open Source) and use it to make predictions on future application volumes. With predicted volumes, we could estimate an approximated 
+      number of newly hired agents that are required.<br>
+      Here is a similar but simpler time series forecast project developed with Prophet by me(<a href="https://github.com/HongzhenGit/Time-Series-Forecasting">Forecast on electricity demand in AUS</a>)<br>
       <!--<ul>
        <li>Data preparation and pre-processing(resample the data, fill up null values, remove outliers).</li>
        <li>Correlation anlysis to get the extra regressors that may help improve the model explanation capability.</li>
@@ -133,11 +134,11 @@
       </ul>-->
       <br>
       <h4><b>NLP research on Customers Complaints(DFS, 03.2021 - 07.2021)</b></h4>
-      With the continuous increase in market share that DFS products possess, lots of text comments(or voice transcripts) are received by our agents, which include feedbacks, general comments 
-      and customer complaints. It is hard to review these text materials manually, so an automated document analysis tool is necessary to help on the analysis and classifications. We constructed 
-      a binary classifer with pre-trained BERT to detect complaints from a large set of texts, and then took advantage of a Random Forest classifier to devide these complaints into a set of 
+      With the continuous increase in market share that DFS products possess, lots of text comments(or voice transcripts) are received by our agents, which include feedbacks 
+      and customer complaints. It is hard to review these text materials manually, so an automated document analysis tool is necessary to help on the analytic and classification tasks. We constructed 
+      a binary classifer with pre-trained BERT to recognize complaints from a large set of texts, and then took advantage of a Random Forest classifier to divide these complaints into a set of 
       determined categories. For non-labeled complaints, a network-based community detection method is leveraged to analyse their natrual clusters.<br>
-      Here is a similar and simpler project based on public dataset(<a href="https://github.com/HongzhenGit/NLP-Research">One VS Rest Document Classifier</a>)<br>
+      Here is a similar but simpler classifier project developed with pre-trained BERT by me(<a href="https://github.com/HongzhenGit/NLP-Research">One VS Rest Document Classifier</a>)<br>
       <!--<ul>
        <li>Text preprocessing(Remove punctuations and stopwords, Word Steming or Lemmatization..)  </li>
        <li>Build a binary classifier based on BERT to detect complaints</li>
@@ -147,10 +148,15 @@
       </ul>-->
       <br>
       <h4><b>Feature Selection for Generalized Memory Polynomial(GMP) Model(ADI, 07.2019 - 01.2020)</b></h4>
-      Generalized Memory Polynomial(GMP) Model is a widely-used compensation structure in Digital Pre-Distortion. To get a desirable improvment in linearity, a GMP model could be very complex,
-      which means lots of circuit components need to be embeded on one chip. To reduce cost and simplify the structure of DPD, a good solution is to only keep those featrues that have significant impact on the compensation of linearity. 
-      However, DPD is working on the frequency domain and the signal data used to build GMP model are complex numbers. To deal with this issue, We did research into the gradient descent and Gauss-Newton method in complex domain to help us estimate the parameters of a standard GMP model, 
-      and leveraged the method mentiond in <a href="https://doi.org/10.1121/1.5042363 ">Muhammad Tabassum and Esa Ollila</a> to get a sparse version of GMP model.<br>
+      Generalized Memory Polynomial (GMP) Model is a widely-used compensation structure for linearity in Digital Pre-Distortion (DPD). However, DPD is working on the frequency domain 
+      and the signal data used to build GMP model are complex numbers. Our target was to simplify the form of GMP model and then reduce the circuit scale of DPD. We did research into 
+      the gradient descent and Gauss-Newton method in complex domain to help us estimate the parameters of a standard GMP model, and leveraged the c-Lasso algorithm mentioned in 
+      <a href="https://doi.org/10.1121/1.5042363 ">Muhammad Tabassum and Esa Ollila</a> to get a simplified GMP model with sparse parameters.<br>
+      <!--Generalized Memory Polynomial(GMP) Model is a widely-used compensation structure in Digital Pre-Distortion. To get a desirable improvment in linearity, a GMP model could be very complex,
+      which requires a circuit with large scale. To reduce cost and simplify the structure of DPD, a good solution is to only keep those featrues that have significant impact on the compensation. 
+      However, DPD is working on the frequency domain and the signal data used to build GMP model are complex numbers. To deal with these issues, We did research into the gradient descent and 
+      Gauss-Newton method in complex domain to help us estimate the parameters of a standard GMP model, 
+      and leveraged the c-Lasso algorithm mentiond in <a href="https://doi.org/10.1121/1.5042363 ">Muhammad Tabassum and Esa Ollila</a> to get a sparse version of GMP model.<br>-->
       <!--<ul>
        <li>Gradient Descent and Gauss-Newton Method in the complex domain</li>
        <li>LASSO regression in the complex domain</li>
