--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
       <img src="Personal Photo.jpg" height="200" width="200" alt="Hongzhen"></h3>
       <p>I am currently looking for a Phd position in disciplines of Statistics, Physics or Electrical Engineering. During the last two and a half years, 
          I was working as a data analyst at Discover Financial Service, a fin-tech and card issuer company of USA. Before I joined DFS, I was  working as an algorithm 
-        intern at Analog Devices(ADI), an R&D analog IC company.</p>
+        intern at Analog Devices(ADI), an analog IC R&D company.</p>
       <p>I got my Master's degree of engineering at Tianjin University. At that time, my research was mainly focusing on the applications of heuristic algorithms 
          in the information extraction from spectra of magnetic waves(in T-hertz Range).<p>
       <p>I got my bachelor's degree of enginnering majoring in Measurement Technologies and Instruments(a EE-like major) and a double degree of economics minoring in Mathematical 
-         Statistics at Xiamen University. During my undergraduation years, I did research for the first time on a imaging device for meibomian glands of human eyes. I also won
+         Statistics at Xiamen University. During my undergraduate years, I did research for the first time on a imaging device for meibomian glands of human eyes. I also won
          a first prize(UG group) of China National Mathematical Modeling Competition.<p>
       <p>My research interests include Heuristic Algorithms(GA, DE..), signal processing and the applications of LASSO.</p>
       </section>
