--- a/awards.html
+++ b/awards.html
@@ -122,7 +122,7 @@
       For my contributions during 2020 and 2021.<br> 
     <br> 
     <p style="margin:0"> <b>First prize of National Mathematical Modeling Competition</b> <br> 
-      We team(Undergraduation Group, 3 members including me) won this prize in 2015.<br>
+      We team(Undergraduate Group, 3 members including me) won this prize in 2015.<br>
    
       </section>
     </div>
