--- a/working.html
+++ b/working.html
@@ -147,7 +147,7 @@
        <li>Here is a similar and simpler project based on public dataset(<a href="https://github.com/HongzhenGit/NLP-Research">One VS Rest Document Classifier</a>)</li> 
       </ul>-->
       <br>
-      <h4><b>Feature Selection for Generalized Memory Polynomial(GMP) Model(ADI, 07.2019 - 01.2020)</b></h4>
+      <h4><b>Parameter Selection for Generalized Memory Polynomial(GMP) Model(ADI, 07.2019 - 01.2020)</b></h4>
       Generalized Memory Polynomial (GMP) Model is a widely-used compensation structure for linearity in Digital Pre-Distortion (DPD). However, DPD is working on the frequency domain 
       and the signal data used to build GMP model are complex numbers. Our target was to simplify the form of GMP model and then reduce the circuit scale of DPD. We did research into 
       the gradient descent and Gauss-Newton method in complex domain to help us estimate the parameters of a standard GMP model, and leveraged the c-Lasso algorithm mentioned in 
