--- a/research.html
+++ b/research.html
@@ -127,7 +127,7 @@
         Empirical Mode Decomposition is applied to remove noises and non-flat baselines introduced by water vapor and other structure-borne noise resources. Combining methods mentioned above, 
         thicknesses of micron-level coating layers could be measured even if the Signal to Noise Ratio is not large enough, and the minimum measurable limit is also improved to about 40μm. 
         Experiments also demonstrate that, during drying processes, the time gaps between pulses reflected from different interfaces shrink and the thicknesses change in an exponential trend, 
-        which reveals the potential of terahertz technologies in terms of monitoring coating processes </p></div>
+        which reveals the potential of terahertz technologies in terms of monitoring coating processes. </p></div>
     <p style="margin:0">
     <button class="accordion">
      Project Repository 
@@ -142,7 +142,7 @@
      Abstract
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;">
-      <p>Coating is an indispensable process in automobile, marine, aerospace manufacturing and other industries. Reasonable film thickness is not only conducive to the stability of painting quality, but also conducive to saving paint and reducing painting cost. 
+      <p>Coating is an indispensable process in automobile, marine, aerospace manufacturing and other industries. A reasonable film thickness is not only conducive to the stability of painting quality, but also conducive to saving paint and reducing painting cost. 
         With the advent of industrial 4.0 era, it is an inevitable trend to realize online, non-contact, non-destructive and high-precision detection. Compared with traditional measurement methods, THz thickness measurement method could perform non-contact online measurement. 
         However, when the optical thickness of the sample is small, terahertz reflection pulses will overlap in the time domain, and it is impossible to obtain the exact flight time directly from the peak position of the pulses. In order to solve this problem, 
         a thickness measurement method based on reflective terahertz time domain spectroscopy system and stochastic optimization algorithm is proposed. A multivariate regression model of terahertz reflection pulses is established. With the application of Differential Evolution algorithm, 
