--- a/research.html
+++ b/research.html
@@ -142,17 +142,16 @@
      Abstract
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;">
-      <p>Coating is an indispensable process in automobile, marine, aerospace manufacturing and other industries. A reasonable film thickness is not only conducive to the stability of painting quality, but also conducive to saving paint and reducing painting cost. 
-        With the advent of industrial 4.0 era, it is an inevitable trend to realize online, non-contact, non-destructive and high-precision detection. Compared with traditional measurement methods, THz thickness measurement method could perform non-contact online measurement. 
-        However, when the optical thickness of the sample is small, terahertz reflection pulses will overlap in the time domain, and it is impossible to obtain the exact flight time directly from the peak position of the pulses. In order to solve this problem, 
-        a thickness measurement method based on reflective terahertz time domain spectroscopy system and stochastic optimization algorithm is proposed. A multivariate regression model of terahertz reflection pulses is established. With the application of Differential Evolution algorithm, 
-        the thickness of the sample is calculated automatically. The convergence of the differential evolution algorithm was verified by calculating the results from the same time-domain signal several times. 
-        The measurement error introduced by the angle error between the normal direction of the substrate and the direction of terahertz probe is also evaluated. In addition, the feasibility of time-of-flight (TOF) method for measuring the thickness of each layer in multi-layer structure samples is studied. 
-        The measurement results show that the calculated results of Differential Evolution algorithm are stable. The uncertainty of thicknesses of zinc dipping paint, black paint and base paint are 0.22μm(223.87μm), 0.05μm(54.18μm) and 0.08μm(284.95μm), respectively. 
-        The uncertainty of refractive indexes is 0.004(3.967), 002(2.091) and 0.001(1.769), respectively. For zinc dipping paint, angle error of   leads to a measurement error of 0.073. Due to the existence of multiple reflection effects, 
-        although the method can find the flight time of each reflection pulse in the terahertz measurement signal of many layers of samples, it is impossible to distinguish which reflection interface the reflection pulse comes from, so that the thickness of each layer coating cannot be solved. 
-        The analysis shows that the thickness measurement method based on the time-of-flight principle is simple and easy, and the thickness of the single-layer sample can be measured more accurately, which is not sensitive to the angle error. When expanding to the measurement of multi-layer samples, 
-        the method has greater limitations. It is impossible to distinguish multiple reflection pulses in the time domain, and is not feasible to calculate the thickness of each layer. </p></div>
+      <p>Coating is an indispensable process in automobile, marine, aerospace manufacturing and other industries. A reasonable film thickness is not only conducive to the stability of painting quality, but also conducive to saving painting materials and reducing painting cost. 
+        Compared with traditional measurement methods, time-of-flight based terahertz measurement method could perform non-contact, non-destructive and high-precision online detection. 
+        However, when the optical thickness of the sample is too small, terahertz reflection pulses will overlap in the time domain, which makes it hard to extract the flight time directly from the peak positions of reflected pulses. In order to solve this problem, 
+        a thickness measurement method is proposed based on reflective terahertz time domain spectroscopy. A multivariate regression model of terahertz reflection pulses is the core of this method, and with Differential Evolution algorithm, the thickness of samples could be calculated automatically. 
+        We evaluated the measurement errors introduced by displacement angles between the normal direction of sample substrate and the direction of terahertz probe. In addition, the feasibility of time-of-flight (TOF) method for measuring the thickness of multi-layer structure samples is studied. 
+        Results show that with our method, the uncertainties of thicknesses for zinc dipping paint, black paint and base paint are 0.22μm(223.87μm), 0.05μm(54.18μm) and 0.08μm(284.95μm), respectively. 
+        And for refractive indexes, they are 0.004(3.967), 002(2.091) and 0.001(1.769). For zinc dipping paint, a displacement angle of 1 leads to a measurement error of 0.073μm. 
+        For multi-layer samples, although our method could get the flight time of each reflection pulse, 
+        it is impossible to distinguish which reflection interface the reflection pulse comes from, so that the thickness of each layer cannot be measured. 
+    </p></div>
     <p style="margin:0">
     <button class="accordion">
      Project Repository 
