--- a/research.html
+++ b/research.html
@@ -142,14 +142,15 @@
      Abstract
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;">
-      <p>Coating is an indispensable process in automobile, marine, aerospace manufacturing and other industries. A reasonable film thickness is not only conducive to the stability of painting quality, but also conducive to saving painting materials and reducing painting cost. 
+      <p>Coating is an indispensable process in automobile, marine, aerospace manufacturing and other industries. A reasonable film thickness is not only conducive to the stability of painting quality, 
+        but also conducive to saving painting materials and reducing painting cost. 
         Compared with traditional measurement methods, time-of-flight based terahertz measurement method could perform non-contact, non-destructive and high-precision online detection. 
         However, when the optical thickness of the sample is too small, terahertz reflection pulses will overlap in the time domain, which makes it hard to extract the flight time directly from the peak positions of reflected pulses. In order to solve this problem, 
-        a thickness measurement method is proposed based on reflective terahertz time domain spectroscopy. A multivariate regression model of terahertz reflection pulses is the core of this method, and with Differential Evolution algorithm, the thickness of samples could be calculated automatically. 
+        a thickness measurement method is proposed based on reflective terahertz time domain spectroscopy and stochastic optimization algorithm. 
         We evaluated the measurement errors introduced by displacement angles between the normal direction of sample substrate and the direction of terahertz probe. In addition, the feasibility of time-of-flight (TOF) method for measuring the thickness of multi-layer structure samples is studied. 
         Results show that with our method, the uncertainties of thicknesses for zinc dipping paint, black paint and base paint are 0.22μm(223.87μm), 0.05μm(54.18μm) and 0.08μm(284.95μm), respectively. 
-        And for refractive indexes, they are 0.004(3.967), 002(2.091) and 0.001(1.769). For zinc dipping paint, a displacement angle of 1 leads to a measurement error of 0.073μm. 
-        For multi-layer samples, although our method could get the flight time of each reflection pulse, 
+        And for refractive indexes, they are 0.004(3.967), 002(2.091) and 0.001(1.769). In case of zinc dipping paint, a displacement angle of 1 leads to a measurement error of 0.073μm. 
+        When detecting multi-layer samples, although our method could get the flight time of each reflection pulse, 
         it is impossible to distinguish which reflection interface the reflection pulse comes from, so that the thickness of each layer cannot be measured. 
     </p></div>
     <p style="margin:0">
