--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         my research was mainly focusing on the applications of heuristic algorithms in information extraction from spectra of magnetic waves(in T-hertz Range). <p>
       <p>I got my bachelor's degree in enginnering majoring in Measurement Technologies and Instruments(a EE-like major) and a double degree in economics minoring in Mathematical 
          Statistics at Xiamen University. During my undergraduate years, I did research for the first time on an imaging device for meibomian glands of human eyes. <p>
-      <p>My research interests include Heuristic Algorithms, signal processing and the applications of LASSO. </p>
+      <p>I have research or working experiences in heuristic algorithms, signal processing and machine learning. </p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
