--- a/research.html
+++ b/research.html
@@ -123,9 +123,9 @@
     </button> 
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;">
       <p> There is a minimum measurable thickness when gauging micron-level coating films with time-of-flight based terahertz thickness measurement technologies. To improve this minimum measurable limit, 
-        a time-domain model of terahertz signals is derived by considering multiple reflected pulses, using the Differential Evolution algorithm to calibrate parameters automatically. 
+        a time-domain model of terahertz signals is derived by taking multiple reflected pulses into consideration, using the Differential Evolution algorithm to calibrate parameters automatically. 
         Empirical Mode Decomposition is applied to remove noises and non-flat baselines introduced by water vapor and other structure-borne noise resources. Combining methods mentioned above, 
-        thicknesses of micron-level coating layers could be measured even if the Signal to Noise Ratio is not large enough, and the minimum measurable limit is also improved to about 40μm. 
+        thicknesses of micron-level coating layers could be measured even if the Signal to Noise Ratio is not large enough, and the minimum measurable limit is improved to about 40μm. 
         Experiments also demonstrate that, during drying processes, the time gaps between pulses reflected from different interfaces shrink and the thicknesses change in an exponential trend, 
         which reveals the potential of terahertz technologies in terms of monitoring coating processes. </p></div>
     <p style="margin:0">
