--- a/working.html
+++ b/working.html
@@ -121,9 +121,9 @@
       <h4><b>Volume Forecast of Home Loan Applications(DFS, 02.2022 - 05.2022)</b></h4>
       This project is proposed mainly becasue the house price in USA jumped by 18% last year. This significant increase in house price brings a boost of $3.2 trillion in home equity, 
       which contributed a lot to the momentum for home equity loan applications. As a consequence, DFS need hire more stuffs to help on these extra applications. To provide some insights, we built a 
-      time series model with Prophet (Developed by Meta Open Source) and use it to make predictions on future application volumes. With predicted volumes, we could estimate an approximated 
-      number of newly hired agents that are required.<br>
-      Here is a similar but simpler time series forecast project developed with Prophet by me(<a href="https://github.com/HongzhenGit/Time-Series-Forecasting">Forecast on electricity demand in AUS</a>)<br>
+      time series model with Prophet (Developed by Meta Open Source) and used it to make predictions on future application volumes. With predicted volumes, an approximated 
+      number of newly hired agents could be estimated.<br>
+      Here is another similar but simpler time series forecast project developed with Prophet by me(<a href="https://github.com/HongzhenGit/Time-Series-Forecasting">Forecast on electricity demand in AUS</a>)<br>
       <!--<ul>
        <li>Data preparation and pre-processing(resample the data, fill up null values, remove outliers).</li>
        <li>Correlation anlysis to get the extra regressors that may help improve the model explanation capability.</li>
@@ -138,7 +138,7 @@
       and customer complaints. It is hard to review these text materials manually, so an automated document analysis tool is necessary to help on the analytic and classification tasks. We constructed 
       a binary classifer with pre-trained BERT to recognize complaints from a large set of texts, and then took advantage of a Random Forest classifier to divide these complaints into a set of 
       determined categories. For non-labeled complaints, a network-based community detection method is leveraged to analyse their natrual clusters.<br>
-      Here is a similar but simpler classifier project developed with pre-trained BERT by me(<a href="https://github.com/HongzhenGit/NLP-Research">One VS Rest Document Classifier</a>)<br>
+      Here is another similar but simpler classifier project developed with pre-trained BERT by me(<a href="https://github.com/HongzhenGit/NLP-Research">One VS Rest Document Classifier</a>)<br>
       <!--<ul>
        <li>Text preprocessing(Remove punctuations and stopwords, Word Steming or Lemmatization..)  </li>
        <li>Build a binary classifier based on BERT to detect complaints</li>
