--- a/working.html
+++ b/working.html
@@ -137,7 +137,7 @@
       With the continuous increase in market share that DFS products possess, lots of text comments(or voice transcripts) are received by our agents, which include feedbacks 
       and customer complaints. It is hard to review these text materials manually, so an automated document analysis tool is necessary to help on the analytic and classification tasks. We constructed 
       a binary classifer with pre-trained BERT to recognize complaints from a large set of texts, and then took advantage of a Random Forest classifier to divide these complaints into a set of 
-      determined categories. For non-labeled complaints, a network-based community detection method is leveraged to analyse their natrual clusters.<br>
+      determined categories. For non-labeled complaints, a network-based community detection method was leveraged to analyse their natrual clusters.<br>
       Here is another similar but simpler classifier project developed with pre-trained BERT by me(<a href="https://github.com/HongzhenGit/NLP-Research">One VS Rest Document Classifier</a>)<br>
       <!--<ul>
        <li>Text preprocessing(Remove punctuations and stopwords, Word Steming or Lemmatization..)  </li>
@@ -156,7 +156,7 @@
       which requires a circuit with large scale. To reduce cost and simplify the structure of DPD, a good solution is to only keep those featrues that have significant impact on the compensation. 
       However, DPD is working on the frequency domain and the signal data used to build GMP model are complex numbers. To deal with these issues, We did research into the gradient descent and 
       Gauss-Newton method in complex domain to help us estimate the parameters of a standard GMP model, 
-      and leveraged the c-Lasso algorithm mentiond in <a href="https://doi.org/10.1121/1.5042363 ">Muhammad Tabassum and Esa Ollila</a> to get a sparse version of GMP model.<br>-->
+      and applied the c-Lasso algorithm mentiond in <a href="https://doi.org/10.1121/1.5042363 ">Muhammad Tabassum and Esa Ollila</a> to get a sparse version of GMP model.<br>-->
       <!--<ul>
        <li>Gradient Descent and Gauss-Newton Method in the complex domain</li>
        <li>LASSO regression in the complex domain</li>
@@ -169,7 +169,7 @@
       <h3 style="margin-top:2px margin-bottom:6px">Other Projects</h3>
       <h4 style="margin-top:6px">Data Management Platform developed with PyQt(DFS, 08.2020 - 01.2021)</h4>
       This is a desktop application developed with PyQt to maintain the invoice data from third party vendors. We built the connections between our app and data warehouses(Teradata, Snowflake, MySQL..).
-      With these connections, our application could structure the data from vendors and upload them onto our data warehouses automatically. Besides, some visualization reports are also constructed to track the 
+      With these connections, our application could structure the data from vendors and upload them onto our data warehouses automatically. Besides, some visualization reports were also constructed to track the 
       performance of thrid party costs.
       <!--<ul>
         <li>Developed a desktop application based on PyQt</li>
