--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         intern at Analog Devices(ADI), an analog IC R&D company.</p>
       <p>I got my Master's degree in engineering at Tianjin University in the School of Precision Instrument and Opto-Electronics Engineering. At that time, 
         my research was mainly focusing on the applications of heuristic algorithms in information extraction from spectra of magnetic waves(in T-hertz Range). <p>
-      <p>I got my bachelor's degree in enginnering majoring in Measurement Technologies and Instruments(a EE-like major) and a double degree in economics minoring in Mathematical 
+      <p>I got my bachelor's degree in enginnering majoring in Photoelectronic Measurement Technology and Instrumentation(a EE-like major) and a double degree in economics minoring in Mathematical 
          Statistics at Xiamen University. During my undergraduate years, I did research for the first time on an imaging device for meibomian glands of human eyes. <p>
       <p>I have research or working experiences in heuristic algorithms, signal processing and machine learning. </p>
       </section>
