--- a/research.html
+++ b/research.html
@@ -149,7 +149,7 @@
         a thickness measurement method is proposed based on reflective terahertz time domain spectroscopy and a stochastic optimization algorithm named Differential Evolution(DE). 
         To evaluate the stability of our method, we calculated the measurement errors introduced by displacement angles between the normal direction of sample substrate and the direction of terahertz probe. 
         In addition, the capability of time-of-flight (TOF) method for measuring the thickness of multi-layer structure samples is also studied. 
-        Results show that, the uncertainties of thicknesses for zinc dipping paint, black paint and base paint are 0.22μm(223.87μm), 0.05μm(54.18μm) and 0.08μm(284.95μm), respectively. 
+        Results show that, the uncertainties when measuring thicknesses for zinc dipping paint, black paint and base paint are 0.22μm(223.87μm), 0.05μm(54.18μm) and 0.08μm(284.95μm), respectively. 
         And for refractive indexes, they are 0.004(3.967), 002(2.091) and 0.001(1.769). In case of zinc dipping paint, a displacement angle of 1 leads to a measurement error of 0.073μm. 
         When detecting multi-layer samples, although our method could get the flight time of each reflection pulse, 
         it is impossible to distinguish which reflection interface the reflection pulse comes from, so that the thickness of each layer cannot be measured. 
