--- a/awards.html
+++ b/awards.html
@@ -83,8 +83,8 @@
       <header>
         <h1>ZHANG, Hongzhen</h1>
         <p>Senior Data Analyst<br>Discover Financial Service</p>
-        <p>Postgraduation University<br><a href="http://www.tju.edu.cn/english/index.htm">Tianjin University(TJU)</a></p>
-        <p>Undergraduation University<br><a href="https://en.xmu.edu.cn/">Xiamen University(XMU)</a></p>
+        <p>Postgraduate University<br><a href="http://www.tju.edu.cn/english/index.htm">Tianjin University(TJU)</a></p>
+        <p>Undergraduate University<br><a href="https://en.xmu.edu.cn/">Xiamen University(XMU)</a></p>
     <h3><a href="https://hongzhengit.github.io/">About Me</a></h3>
         <h3><a href="https://hongzhengit.github.io/research.html">Research</a></h3>
     <h3><a href="https://hongzhengit.github.io/research/Zhanghongzhen_Academic CV.pdf">CV/Resume</a></h3>  
