--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
       <p>I am currently looking for a PhD position in disciplines of Statistics, Mathematics or Engineering. During the last two and a half years, 
          I was working as a data analyst at Discover Financial Service, a fin-tech and card issuer company of USA. Before I joined DFS, I was  working as an algorithm 
         intern at Analog Devices(ADI), an analog IC R&D company.</p>
-      <p>I got my Master's degree of Engineering at Tianjin University in the School of Precision Instrument and Opto-Electronics Engineering. At that time, 
-        my research was mainly focusing on the applications of heuristic algorithms in information extraction from spectra of magnetic waves(in T-hertz Range). <p>
+      <p>I got my Master's degree of Engineering affiliated with State Key Laboratory of Precision Measuring Technology and Instruments, in the School of Precision Instrument and Opto-Electronics Engineering at Tianjin University. 
+        At that time, my research was mainly focusing on the applications of heuristic algorithms in information extraction from spectra of magnetic waves(in T-hertz Range). <p>
       <p>I got my bachelor's degree of Enginnering majoring in Photoelectronic Measurement Technology and Instrumentation(a EE-like major) and a double degree of Economics minoring in Mathematical 
          Statistics at Xiamen University. During my undergraduate years, I did research for the first time on an imaging device for meibomian glands of human eyes. <p>
       <p>I have research or working experiences in heuristic algorithms, signal processing and machine learning. </p>
