--- a/research.html
+++ b/research.html
@@ -171,6 +171,7 @@
       Snapshot
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://xueshu.baidu.com/usercenter/paper/show?paperid=1b0d0vh0qa3a06k0u51k0830we574294&site=xueshu_se">一种基于Rouard方法与太赫兹脉冲频谱的非极性材料检测方法</a> </p></div>
+    <p style="margin:0">
     <button class="accordion">
       Details
     </button>
@@ -183,6 +184,7 @@
       Snapshot
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://xueshu.baidu.com/usercenter/paper/show?paperid=19210830cv7a0p302f140e707r051772&site=xueshu_se">一种基于太赫兹脉冲频谱与最优化算法的涂层厚度测量方法</a> </p></div>
+    <p style="margin:0">
     <button class="accordion">  
       Details
     </button>
