--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
          I was working as a data analyst at Discover Financial Service, a fin-tech and card issuer company of USA. Before I joined DFS, I was  working as an algorithm 
         intern at Analog Devices(ADI), an analog IC R&D company.</p>
       <p>I got my Master's degree of Engineering, affiliated with State Key Laboratory of Precision Measuring Technology and Instruments, at Tianjin University. 
-        At that time, my research was mainly focusing on the applications of heuristic algorithms in information extraction from spectra of magnetic waves(in T-hertz Range). <p>
+        At that time, my research was mainly focusing on the information extraction methods for Terahertz spectra. It is part of an edge-cutting project for the imaging and non-destructive device 
+        based on Terahertz Time Domain Spectroscopy, which was funded by National Natural Science Foundation of China. <p>
       <p>I got my bachelor's degree of Enginnering majoring in Photoelectronic Measurement Technology and Instrumentation(a EE-like major) and a double degree of Economics minoring in Mathematical 
          Statistics at Xiamen University. During my undergraduate years, I did research for the first time on an imaging device for meibomian glands of human eyes. <p>
       <p>I have research or working experiences in heuristic algorithms, signal processing and machine learning. </p>
