--- a/research.html
+++ b/research.html
@@ -166,7 +166,7 @@
     <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Invention Patents</h2>
 
     <p style="margin:0"> <b>A terahertz non-polar material detection technology based on Rouard’s Method</b> <br> 
-      Waiting for autorization, with HE Mingxia, SHI Lili, WANG Pu.<br>
+      Waiting for granting, with HE Mingxia, SHI Lili, WANG Pu.<br>
     <button class="accordion">
       Snapshot
     </button>
@@ -179,7 +179,7 @@
     <br>
 
     <p style="margin:0"> <b>A thickness measurement technology developed with terahertz spectrum</b> <br> 
-      Autorized, with HE Mingxia, SHI Lili, WANG Pu.<br> 
+      Granted, with HE Mingxia, SHI Lili, WANG Pu.<br> 
     <button class="accordion">
       Snapshot
     </button>
@@ -192,7 +192,7 @@
     <br>
     
     <p style="margin:0"> <b>A multispectral imaging device for the Meibomian glands of human eyes</b> <br> 
-      Autorized, with CHEN Yanping, ZHENG Tianyu, YANG, Yifan. <br>
+      Granted, with CHEN Yanping, ZHENG Tianyu, YANG, Yifan. <br>
     <button class="accordion">
       Snapshot
     </button>
