--- a/working.html
+++ b/working.html
@@ -137,7 +137,7 @@
       With the continuous increase in market share that DFS products possess, lots of text comments(or voice transcripts) are received by our agents, which include feedbacks 
       and customer complaints. It is hard to review these text materials manually, so an automated document analysis tool is necessary to help on the analytic and classification tasks. We constructed 
       a binary classifer with pre-trained BERT to recognize complaints from a large set of texts, and then took advantage of a Random Forest classifier to divide these complaints into a set of 
-      determined categories. For non-labeled complaints, a network-based community detection method was leveraged to analyse their natrual clusters.<br>
+      determined categories. For non-labeled complaints, a Spherical k-Means Clustering method was leveraged to analyse their natrual clusters.<br>
       Here is another similar but simpler classifier project developed with pre-trained BERT by me(<a href="https://github.com/HongzhenGit/NLP-Research">One VS Rest Document Classifier</a>)<br>
       <!--<ul>
        <li>Text preprocessing(Remove punctuations and stopwords, Word Steming or Lemmatization..)  </li>
