--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </header>
       <section>
       <img src="Personal Photo.jpg" height="200" width="200" alt="Hongzhen"></h3>
-      <p>I am currently looking for a PhD position in disciplines of Statistics, Mathematics or Engineering. During the last two and a half years, 
+      <p>During the last two and a half years, 
          I was working as a data analyst at Discover Financial Service, a fin-tech and card issuer company of USA. Before I joined DFS, I was  working as an algorithm 
         intern at Analog Devices(ADI), an analog IC R&D company.</p>
       <p>I got my Master's degree of Engineering, affiliated with State Key Laboratory of Precision Measuring Technology and Instruments, at Tianjin University. 
