--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <p>Undergraduate University<br><a href="https://en.xmu.edu.cn/">Xiamen University(XMU)</a></p>
     <h3><a href="https://hongzhengit.github.io/">About Me</a></h3>
         <h3><a href="https://hongzhengit.github.io/research.html">Research</a></h3>
-    <h3><a href="https://hongzhengit.github.io/research/Zhanghongzhen_Academic CV.pdf">CV/Resume</a></h3>  
+    <h3><a href="https://hongzhengit.github.io/research/Zhanghongzhen_Academic CV - short.pdf">CV/Resume</a></h3>  
         <!--<h3><a href="https://hongzhengit.github.io/code.html">Project Reporsitory</a></h3>--> 
         <h3><a href="https://hongzhengit.github.io/working.html">Working Experience</a></h3> 
         <h3><a href="https://hongzhengit.github.io/awards.html">Awards</a></h3>
