--- a/working.html
+++ b/working.html
@@ -104,7 +104,7 @@
         </div>
         <br>
 
-    <p><b>Contact Information:</b><br>Email: zhanghongzhen1019@outlook.com<br>Phone Number: 86-18765801028</p>
+    <p><b>Contact Information:</b><br>Email: zhanghongzhen1019@gmail.com<br>Phone Number: 86-18765801028</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
 
       </header>
