--- a/index.html
+++ b/index.html
@@ -110,14 +110,15 @@
       <section>
       <img src="Personal Photo.jpg" height="200" width="200" alt="Hongzhen"></h3>
       <p>During the last two and a half years, 
-         I was working as a data analyst at Discover Financial Service, a fin-tech and card issuer company of USA. Before I joined DFS, I was  working as an algorithm 
+         I was working as a senior analyst at Discover Financial Service, a fin-tech and card issuer company of USA. Before I joined DFS, I was  working as an algorithm 
         intern at Analog Devices(ADI), an analog IC R&D company.</p>
       <p>I got my Master's degree of Engineering, affiliated with State Key Laboratory of Precision Measuring Technology and Instruments, at Tianjin University. 
-        At that time, my research was mainly focusing on the information extraction methods for Terahertz signals. It is part of an edge-cutting project for the imaging and non-destructive testing device 
+        At that time, my research was mainly focusing on the information extraction methods for terahertz spectra. It is part of an edge-cutting project for the imaging and non-destructive testing device 
         based on Terahertz Time Domain Spectroscopy, which was funded by National Natural Science Foundation of China. <p>
       <p>I got my bachelor's degree of Enginnering majoring in Photoelectronic Measurement Technology and Instrumentation(a EE-like major) and a double degree of Economics minoring in Mathematical 
          Statistics at Xiamen University. During my undergraduate years, I did research for the first time on an imaging device for meibomian glands of human eyes. <p>
-      <p>I have research or working experiences in heuristic algorithms, signal processing and machine learning. </p>
+      <p>I have research and working experiences in optimization algorithms, signal processing and machine learning. For my research and business projects, please refer the corresponding research or working pages. Serveral algorithms and models 
+      were implemented in my reporsitory, including LASSO(Least Angle Regression) for Sparse Deconvolution, evolution optimization algorithms (GA and DE), and Neural Networks models developed with PyTroch framework.</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
