--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <p>I got my bachelor's degree of Enginnering majoring in Photoelectronic Measurement Technology and Instrumentation(a EE-like major) and a double degree of Economics minoring in Mathematical 
          Statistics at Xiamen University. During my undergraduate years, I did research for the first time on an imaging device for meibomian glands of human eyes. <p>
       <p>I have research and working experiences in optimization algorithms, signal processing and machine learning. For my research and business projects, please refer the corresponding research or working pages. Serveral algorithms and models 
-      were implemented in my reporsitory, including LASSO(Least Angle Regression) for Sparse Deconvolution, evolution optimization algorithms (GA and DE), and Neural Networks models developed with PyTroch framework.</p>
+      were implemented in my reporsitory, including LASSO(Least Angle Regression) for Sparse Deconvolution, evolution optimization algorithms (GA and DE), and Neural Networks models developed with PyTorch framework.</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
