--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
       </header>
       <section>
       <img src="Personal Photo.jpg" height="200" width="200" alt="Hongzhen"></h3>
-      <p>During the last two and a half years, 
-         I was working as a senior analyst at Discover Financial Service, a fin-tech and card issuer company of USA. Before I joined DFS, I was  working as an algorithm 
+      <p>During the past one year, I was working at a company in the chemical industry, and before that,
+         I was a senior analyst at Discover Financial Service, a fin-tech and card issuer company of USA. Before I joined DFS, I was  working as an algorithm 
         intern at Analog Devices(ADI), an analog IC R&D company.</p>
       <p>I got my Master's degree of Engineering, affiliated with State Key Laboratory of Precision Measuring Technology and Instruments, at Tianjin University. 
         At that time, my research was mainly focusing on the information extraction methods for terahertz spectra. It is part of an edge-cutting project for the imaging and non-destructive testing device 
